setting max width on messages box to prevent horizontal scrolling

--- a/src/components/message/styles.module.scss
+++ b/src/components/message/styles.module.scss
@@ -19,6 +19,8 @@
     background-color: var(--bg-light);
     width: max-content;
     padding: var(--margin-sm);
+    max-width: 600px;
+    line-height: 135%;
     border-radius: var(--margin-sm);
   }
 
